; ModuleID = '/home/carl/AnghaBench/tig/src/extr_view.c_add_line_alloc_.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_view.c_add_line_alloc_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.line = type { i8* }
%struct.view = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.line* @add_line_alloc_(%struct.view* %0, i8** %1, i32 %2, i64 %3, i32 %4) #0 {
  %6 = alloca %struct.view*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.line*, align 8
  store %struct.view* %0, %struct.view** %6, align 8
  store i8** %1, i8*** %7, align 8
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  store i32 %4, i32* %10, align 4
  %12 = load %struct.view*, %struct.view** %6, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load i64, i64* %9, align 8
  %15 = load i32, i32* %10, align 4
  %16 = call %struct.line* @add_line(%struct.view* %12, i32* null, i32 %13, i64 %14, i32 %15)
  store %struct.line* %16, %struct.line** %11, align 8
  %17 = load %struct.line*, %struct.line** %11, align 8
  %18 = icmp ne %struct.line* %17, null
  br i1 %18, label %19, label %24

19:                                               ; preds = %5
  %20 = load %struct.line*, %struct.line** %11, align 8
  %21 = getelementptr inbounds %struct.line, %struct.line* %20, i32 0, i32 0
  %22 = load i8*, i8** %21, align 8
  %23 = load i8**, i8*** %7, align 8
  store i8* %22, i8** %23, align 8
  br label %24

24:                                               ; preds = %19, %5
  %25 = load %struct.line*, %struct.line** %11, align 8
  ret %struct.line* %25
}

declare dso_local %struct.line* @add_line(%struct.view*, i32*, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
